--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "router"
   ],
   "keywords": [
-    "yeoman-generator", "guick"
+    "yeoman-generator",
+    "guick"
   ],
   "dependencies": {
     "chalk": "^1.1.1",
+    "mkdirp": "^0.5.1",
     "yeoman-generator": "^0.20.3",
     "yosay": "^1.1.0"
   }
